app.log

> Task :compileJava FAILED
/Users/yu_seok/Documents/workspace/Spring/BaseBallLOCK/src/main/java/com/kepg/BaseBallLOCK/modules/customplayer/repository/CustomPlayerRepository.java:3: error: package com.kepg.BaseBallLOCK.modules.customplayer.domain does not exist
import com.kepg.BaseBallLOCK.modules.customplayer.domain.CustomPlayer;
                                                        ^
/Users/yu_seok/Documents/workspace/Spring/BaseBallLOCK/src/main/java/com/kepg/BaseBallLOCK/modules/customplayer/repository/CustomPlayerRepository.java:16: error: cannot find symbol
public interface CustomPlayerRepository extends JpaRepository<CustomPlayer, Long> {
                                                              ^
  symbol: class CustomPlayer
/Users/yu_seok/Documents/workspace/Spring/BaseBallLOCK/src/main/java/com/kepg/BaseBallLOCK/modules/customplayer/repository/CustomPlayerRepository.java:21: error: cannot find symbol
    List<CustomPlayer> findByUserIdOrderByLevelDescCreatedAtDesc(Integer userId);
         ^
  symbol:   class CustomPlayer
  location: interface CustomPlayerRepository
/Users/yu_seok/Documents/workspace/Spring/BaseBallLOCK/src/main/java/com/kepg/BaseBallLOCK/modules/customplayer/repository/CustomPlayerRepository.java:28: error: cannot find symbol
    List<CustomPlayer> findActiveCustomPlayersByUserId(@Param("userId") Integer userId);
         ^
  symbol:   class CustomPlayer
  location: interface CustomPlayerRepository
/Users/yu_seok/Documents/workspace/Spring/BaseBallLOCK/src/main/java/com/kepg/BaseBallLOCK/modules/customplayer/repository/CustomPlayerRepository.java:35: error: cannot find symbol
    List<CustomPlayer> findFavoritePlayersByUserId(@Param("userId") Integer userId);
         ^
  symbol:   class CustomPlayer
  location: interface CustomPlayerRepository
/Users/yu_seok/Documents/workspace/Spring/BaseBallLOCK/src/main/java/com/kepg/BaseBallLOCK/modules/customplayer/repository/CustomPlayerRepository.java:40: error: cannot find symbol
    List<CustomPlayer> findByUserIdAndLevelGreaterThanEqualOrderByLevelDesc(Integer userId, Integer minLevel);
         ^
  symbol:   class CustomPlayer
  location: interface CustomPlayerRepository
/Users/yu_seok/Documents/workspace/Spring/BaseBallLOCK/src/main/java/com/kepg/BaseBallLOCK/modules/customplayer/repository/CustomPlayerRepository.java:50: error: cannot find symbol
    Optional<CustomPlayer> findTopByUserIdOrderByLevelDescExperienceDesc(Integer userId);
             ^
  symbol:   class CustomPlayer
  location: interface CustomPlayerRepository
/Users/yu_seok/Documents/workspace/Spring/BaseBallLOCK/src/main/java/com/kepg/BaseBallLOCK/modules/customplayer/repository/CustomPlayerRepository.java:57: error: cannot find symbol
    List<CustomPlayer> findByUserIdAndPosition(@Param("userId") Integer userId, 
         ^
  symbol:   class CustomPlayer
  location: interface CustomPlayerRepository
/Users/yu_seok/Documents/workspace/Spring/BaseBallLOCK/src/main/java/com/kepg/BaseBallLOCK/modules/customplayer/repository/CustomPlayerRepository.java:65: error: cannot find symbol
    List<CustomPlayer> findTopPlayersByTotalStats(@Param("userId") Integer userId);
         ^
  symbol:   class CustomPlayer
  location: interface CustomPlayerRepository
/Users/yu_seok/Documents/workspace/Spring/BaseBallLOCK/src/main/java/com/kepg/BaseBallLOCK/modules/customplayer/repository/CustomPlayerRepository.java:71: error: cannot find symbol
    List<CustomPlayer> findByUserIdAndPowerGreaterThanEqual(@Param("userId") Integer userId, 
         ^
  symbol:   class CustomPlayer
  location: interface CustomPlayerRepository
/Users/yu_seok/Documents/workspace/Spring/BaseBallLOCK/src/main/java/com/kepg/BaseBallLOCK/modules/customplayer/repository/CustomPlayerRepository.java:75: error: cannot find symbol
    List<CustomPlayer> findByUserIdAndContactGreaterThanEqual(@Param("userId") Integer userId, 
         ^
  symbol:   class CustomPlayer
  location: interface CustomPlayerRepository
/Users/yu_seok/Documents/workspace/Spring/BaseBallLOCK/src/main/java/com/kepg/BaseBallLOCK/modules/customplayer/repository/CustomPlayerRepository.java:79: error: cannot find symbol
    List<CustomPlayer> findByUserIdAndSpeedGreaterThanEqual(@Param("userId") Integer userId, 
         ^
  symbol:   class CustomPlayer
  location: interface CustomPlayerRepository
12 errors

[Incubating] Problems report is available at: file:///Users/yu_seok/Documents/workspace/Spring/BaseBallLOCK/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  /Users/yu_seok/Documents/workspace/Spring/BaseBallLOCK/src/main/java/com/kepg/BaseBallLOCK/modules/customplayer/repository/CustomPlayerRepository.java:3: error: package com.kepg.BaseBallLOCK.modules.customplayer.domain does not exist
  import com.kepg.BaseBallLOCK.modules.customplayer.domain.CustomPlayer;
                                                          ^
  12 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 1s
1 actionable task: 1 executed
